--- a/style-weapon.css
+++ b/style-weapon.css
@@ -3,17 +3,20 @@
     src: url(./Mantinia\ Regular.otf);
 }
 
-.container {
+body {
+    background-color: black;
+}
+
+.main {
     display: grid;
     height: 100vh;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 0.3fr 0.3fr 2fr 1.2fr 0.4fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
     grid-template-areas: 
-    "header header"
-    "image h1"
-    "image main"
-    "content1 content1"
-    "footer footer";
+    "header header header"
+    "main main main"
+    "main main main"
+    "main main main";
     grid-gap: 1rem;
     font-family: Mantinia;
     font-weight: bold;
@@ -48,44 +51,6 @@ nav {
     z-index: 100;
 }
 
-.image {
-    grid-area: image;
-    object-fit: cover;
-    width: 80%;
-    max-height: 100%;
-    z-index: 100;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-}
-
-
-
-main {
-    grid-area: main;
-    z-index: 100;
-    background-color: rgba(0,0,0,.3);
-}
-
-.content1 {
-    grid-area: content1;
-    z-index: 100;
-    background-color: rgba(0,0,0,.3);
-}
-
-.content2 {
-    grid-area: content2;
-    z-index: 100;
-    background-color: rgba(0,0,0,.3);
-}
-
-footer {
-    grid-area: footer;
-    z-index: 100;
-    background-color: rgba(0,0,0,.3);
-}
-
 video {
     position: fixed;
     z-index: -10;
@@ -94,20 +59,61 @@ video {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    }
+}
+
 
 a {
     text-decoration: none;
     color: inherit;
 }
 
-.main {
-    z-index: 100;
-    display: grid
-}
-
 .title {
-    grid-area: h1;
+    /* grid-area: title; */
     z-index: 100;
     background-color: rgba(0,0,0,.3);
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+}
+
+.weaponimage {
+    /* grid-area: image; */
+    object-fit: cover;
+    width: 50%;
+    max-height: 100%;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+}
+
+.description {
+    /* grid-area: desc; */
+    background-color: rgba(0,0,0,.3);
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+}
+
+.category {
+    background-color: rgba(0,0,0,.3);
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
+    z-index: 100;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    margin: auto;
 }
