--- a/style-weapon.css
+++ b/style-weapon.css
@@ -24,6 +24,23 @@ body {
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
+.check {
+    display: grid;
+    height: 100vh;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    "header header header"
+    "main main main"
+    "main main main"
+    "main main main";
+    grid-gap: 1rem;
+    font-family: Mantinia;
+    font-weight: bold;
+    color: #d1b175;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
 header {
     grid-area: header;
     z-index: 100;
@@ -117,3 +134,16 @@ a {
     align-items: center;
     margin: auto;
 }
+
+.weight {
+    background-color: rgba(0,0,0,.3);
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
+    z-index: 100;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    margin: auto;
+}
+
