--- a/style-weapon.css
+++ b/style-weapon.css
@@ -41,6 +41,40 @@ body {
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
+.mainbosses {
+    display: grid;
+    height: 100vh;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    "header header header"
+    "main main main"
+    "main main main"
+    "main main main";
+    grid-gap: 1rem;
+    font-family: Mantinia;
+    font-weight: bold;
+    color: #d1b175;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+.mainmisc {
+    display: grid;
+    height: 100vh;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    "header header header"
+    "main main main"
+    "main main main"
+    "main main main";
+    grid-gap: 1rem;
+    font-family: Mantinia;
+    font-weight: bold;
+    color: #d1b175;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
 header {
     grid-area: header;
     z-index: 100;
@@ -98,7 +132,7 @@ a {
     margin: auto;
 }
 
-.weaponimage {
+.image {
     /* grid-area: image; */
     object-fit: cover;
     width: 50%;
@@ -147,3 +181,62 @@ a {
     margin: auto;
 }
 
+.location {
+    background-color: rgba(0,0,0,.3);
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
+    z-index: 100;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    margin: auto;
+}
+
+.hp {
+    background-color: rgba(0,0,0,.3);
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
+    z-index: 100;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    margin: auto;
+}
+
+.drops {
+    background-color: rgba(0,0,0,.3);
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
+    z-index: 100;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    margin: auto;
+}
+
+.type {
+    background-color: rgba(0,0,0,.3);
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
+    z-index: 100;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    margin: auto;
+}
+
+.effect {
+    background-color: rgba(0,0,0,.3);
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
+    z-index: 100;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    margin: auto;
+}
