--- a/style-weapon.css
+++ b/style-weapon.css
@@ -81,7 +81,7 @@ header {
     color: #d1b175;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     background-color: rgba(0,0,0,.3);
-    font-size: 20px;
+    font-size: 1.8vh;
 
 }
 
@@ -130,6 +130,7 @@ a {
     justify-content: center;
     align-items: center;
     margin: auto;
+    font-size: 2vh;
 }
 
 .image {
@@ -155,6 +156,7 @@ a {
     justify-content: center;
     align-items: center;
     margin: auto;
+    font-size: 1.6vh;
 }
 
 .category {
@@ -167,6 +169,7 @@ a {
     justify-content: start;
     align-items: center;
     margin: auto;
+    font-size: 1.8vh;
 }
 
 .weight {
@@ -179,6 +182,7 @@ a {
     justify-content: start;
     align-items: center;
     margin: auto;
+    font-size: 1.8vh;
 }
 
 .location {
@@ -191,6 +195,7 @@ a {
     justify-content: start;
     align-items: center;
     margin: auto;
+    font-size: 1.6vh;
 }
 
 .hp {
@@ -203,6 +208,7 @@ a {
     justify-content: start;
     align-items: center;
     margin: auto;
+    font-size: 1.6vh;
 }
 
 .drops {
@@ -215,6 +221,7 @@ a {
     justify-content: start;
     align-items: center;
     margin: auto;
+    font-size: 1.6vh;
 }
 
 .type {
@@ -227,6 +234,7 @@ a {
     justify-content: start;
     align-items: center;
     margin: auto;
+    font-size: 1.6vh;
 }
 
 .effect {
@@ -239,4 +247,5 @@ a {
     justify-content: start;
     align-items: center;
     margin: auto;
+    font-size: 1.6vh;
 }
