--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     display: grid;
     height: 100vh;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 0.3fr 0.3fr 2fr 1.2fr 0.4fr;
+    grid-template-rows: 0.1fr 0.3fr 2fr 1.2fr 0.4fr;
     grid-template-areas: 
     "header header"
     "image h1"
@@ -27,7 +27,7 @@ header {
     color: #d1b175;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     background-color: rgba(0,0,0,.3);
-    font-size: 20px;
+    font-size: 1.8vh;
 
 }
 
@@ -60,30 +60,27 @@ nav {
     margin: auto;
 }
 
-
-
 main {
     grid-area: main;
     z-index: 100;
     background-color: rgba(0,0,0,.3);
+    font-size: 2vw;
 }
 
 .content1 {
     grid-area: content1;
     z-index: 100;
     background-color: rgba(0,0,0,.3);
-}
-
-.content2 {
-    grid-area: content2;
-    z-index: 100;
-    background-color: rgba(0,0,0,.3);
+    font-size: 2vh;
 }
 
 footer {
+    font-family: Arial, Helvetica, sans-serif;
     grid-area: footer;
     z-index: 100;
     background-color: rgba(0,0,0,.3);
+    color: rgb(96, 92, 92);
+    text-align: center;
 }
 
 video {
@@ -110,4 +107,6 @@ a {
     grid-area: h1;
     z-index: 100;
     background-color: rgba(0,0,0,.3);
+    font-size: 5vh;
+    text-align: center;
 }
