--- a/css/main-style.css
+++ b/css/main-style.css
@@ -19,6 +19,7 @@
     font-weight: bold;
     color: #d1b175;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    background-color: black;
 }
 
 header {
@@ -109,4 +110,9 @@ a {
     background-color: rgba(0,0,0,.3);
     font-size: 5vh;
     text-align: center;
+}
+
+a:hover {
+    background-color: rgba(0,0,0,.4);
+    border-radius: 3px;
 }
