--- a/css/subsite-style.css
+++ b/css/subsite-style.css
@@ -7,7 +7,7 @@ body {
     background-color: black;
 }
 
-.main {
+.mainweapon {
     display: grid;
     height: 100vh;
     grid-template-columns: 1fr 1fr 1fr;
@@ -24,7 +24,7 @@ body {
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
-.check {
+.mainarmors {
     display: grid;
     height: 100vh;
     grid-template-columns: 1fr 1fr 1fr;
